--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
-    "react-vertical-timeline-component": "^3.6.0"
+    "react-vertical-timeline-component": "^3.6.0",
+    "@svgr/webpack": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -28,6 +29,7 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@svgr/webpack": "^6.0.0"
   }
 }
